--- a/app/src/main/res/menu/activity_main_drawer_admin.xml
+++ b/app/src/main/res/menu/activity_main_drawer_admin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
@@ -10,7 +11,10 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person_black"
             android:title="@string/profile_title" />
-
+        <item
+            android:id="@+id/nav_verifications"
+            android:icon="@drawable/ic_group_add_black"
+            android:title="Verifications" />
 
     </group>
 
