--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,4 +38,16 @@
         app:layout_constraintStart_toStartOf="@+id/text_recruit_name"
         app:layout_constraintTop_toBottomOf="@+id/text_recruit_name" />
 
+    <TextView
+        android:id="@+id/txt_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/image_profile"
+        app:layout_constraintStart_toStartOf="@+id/image_profile"
+        app:layout_constraintTop_toTopOf="@+id/text_recruit_email" />
+
 </android.support.constraint.ConstraintLayout>
