--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,10 +11,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/profile_image"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_recruit_name"
@@ -37,17 +37,5 @@
         app:layout_constraintEnd_toEndOf="@+id/text_recruit_name"
         app:layout_constraintStart_toStartOf="@+id/text_recruit_name"
         app:layout_constraintTop_toBottomOf="@+id/text_recruit_name" />
-
-    <TextView
-        android:id="@+id/txt_admin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/image_profile"
-        app:layout_constraintStart_toStartOf="@+id/image_profile"
-        app:layout_constraintTop_toTopOf="@+id/text_recruit_email" />
 
 </android.support.constraint.ConstraintLayout>
