--- a/app/src/main/res/layout/fragment_recruit_verification_list_item.xml
+++ b/app/src/main/res/layout/fragment_recruit_verification_list_item.xml
@@ -19,22 +19,22 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Joshua Van der Merwe"
         app:layout_constraintBottom_toBottomOf="@+id/img_recruit"
         app:layout_constraintEnd_toStartOf="@+id/btn_decline"
         app:layout_constraintStart_toEndOf="@+id/img_recruit"
-        app:layout_constraintTop_toTopOf="@+id/img_recruit"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toTopOf="@+id/img_recruit" />
 
     <Button
         android:id="@+id/btn_accept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/profile_accept_verification"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_decline"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_decline"
