--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_groups"
             android:icon="@drawable/ic_group_black"
-            android:title="@string/profile_groups" />
+            android:title="@string/groups_user_groups" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person_black"
