--- a/app/src/main/res/menu/activity_main_drawer_admin.xml
+++ b/app/src/main/res/menu/activity_main_drawer_admin.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/menu_member"
+        android:checkableBehavior="all">
+
         <item
             android:id="@+id/nav_groups"
             android:icon="@drawable/ic_group_black"
-            android:title="@string/profile_groups" />
+            android:title="@string/groups_user_groups" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person_black"
             android:title="@string/profile_title" />
-        <item
-            android:id="@+id/nav_verifications"
-            android:icon="@drawable/ic_group_add_black"
-            android:title="Verifications" />
 
     </group>
 
-    <item android:title="Actions">
-        <menu>
-            <item
-                android:id="@+id/nav_sign_out"
-                android:icon="@drawable/ic_lock_outline_black"
-                android:title="@string/action_sign_out" />
-        </menu>
-    </item>
+    <group
+        android:id="@+id/menu_admin"
+        android:checkableBehavior="all">
+        <item
+            android:id="@+id/nav_verifications"
+            android:icon="@drawable/ic_person_add"
+            android:title="@string/profile_verifications_title" />
+        <item
+            android:id="@+id/nav_groups_all"
+            android:icon="@drawable/ic_people_outline_black"
+            android:title="@string/groups_all_groups" />
+    </group>
+
+    <group>
+        <item
+            android:id="@+id/nav_sign_out"
+            android:icon="@drawable/ic_lock_outline_black"
+            android:title="@string/action_sign_out" />
+
+    </group>
 
 </menu>
