--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -11,13 +11,13 @@
         android:id="@+id/image_profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/profile_image"
-        app:srcCompat="@drawable/ic_person_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:srcCompat="@drawable/ic_person_black" />
 
     <TextView
         android:id="@+id/text_recruit_name"
@@ -32,25 +32,25 @@
         android:id="@+id/text_recruit_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/edit_profile_description"
         app:layout_constraintStart_toEndOf="@+id/image_profile"
-        app:layout_constraintTop_toBottomOf="@+id/text_recruit_name"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/text_recruit_name" />
 
     <TextView
         android:id="@+id/text_profile_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/profile_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/image_profile"
-        app:layout_constraintTop_toBottomOf="@+id/image_profile"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/image_profile" />
 
     <EditText
         android:id="@+id/edit_profile_description"
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:gravity="top"
         android:hint="@string/profile_description_edit"
@@ -67,8 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/image_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_profile_description"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_profile_save"
@@ -76,11 +76,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="btnSaveClick"
         android:text="@string/profile_action_save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="8dp"
-        android:onClick="btnSaveClick"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
