--- a/app/src/main/res/layout/dialog_add_group_member_autocomplete_item.xml
+++ b/app/src/main/res/layout/dialog_add_group_member_autocomplete_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tv_recruit_name"
+    style="?android:attr/dropDownItemStyle"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:singleLine="true"
-    style="?android:attr/dropDownItemStyle">
-</TextView>
+    android:singleLine="true" />
