--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -14,12 +14,13 @@
             android:id="@+id/img_group"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="TODO"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_group_black"
-            android:layout_marginLeft="8dp" />
+            app:srcCompat="@drawable/ic_group_black" />
 
         <TextView
             android:id="@+id/txt_group_name"
@@ -38,12 +39,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/txt_group_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_group_name"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_group_name" />
 
         <ListView
             android:id="@+id/list_group_members"
@@ -63,13 +64,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/group_members"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/img_group"
-            app:layout_constraintTop_toBottomOf="@+id/img_group"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/img_group" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -79,9 +80,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_add_white"
+        android:visibility="gone"
         app:layout_anchor="@id/list_group_members"
         app:layout_anchorGravity="bottom|right|end"
-        android:visibility="gone"/>
+        app:srcCompat="@drawable/ic_add_white" />
 
 </android.support.design.widget.CoordinatorLayout>
