--- a/app/src/main/res/layout/fragment_groups_list_item.xml
+++ b/app/src/main/res/layout/fragment_groups_list_item.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -30,10 +29,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txt_group_name"
-        app:layout_constraintTop_toBottomOf="@+id/txt_group_name"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_group_name" />
 </android.support.constraint.ConstraintLayout>
