--- a/app/src/main/res/layout/dialog_add_group_member.xml
+++ b/app/src/main/res/layout/dialog_add_group_member.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,23 +9,29 @@
         android:id="@+id/btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_add"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spin_member_role" />
+        app:layout_constraintTop_toBottomOf="@+id/spin_member_role"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spin_member_role" />
+        app:layout_constraintTop_toBottomOf="@+id/spin_member_role"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginRight="16dp" />
 
     <AutoCompleteTextView
         android:id="@+id/actv_group_member_name"
