--- a/app/src/main/res/layout/dialog_add_group.xml
+++ b/app/src/main/res/layout/dialog_add_group.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/group_name"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/group_city"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="@+id/et_group_name"
         app:layout_constraintStart_toStartOf="@+id/et_group_name"
         app:layout_constraintTop_toBottomOf="@+id/et_group_name" />
