--- a/app/src/main/res/layout/dialog_add_group_member.xml
+++ b/app/src/main/res/layout/dialog_add_group_member.xml
@@ -23,11 +23,10 @@
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_cancel"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spin_member_role"
         app:layout_constraintVertical_bias="1.0"
