--- a/app/src/main/res/layout/fragment_recruit_verification_list_item.xml
+++ b/app/src/main/res/layout/fragment_recruit_verification_list_item.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/profile_accept_verification"
+        android:text="@string/action_accept"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_decline"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -40,7 +40,7 @@
         android:id="@+id/btn_decline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile_decline_verification"
+        android:text="@string/action_decline"
         app:layout_constraintBottom_toBottomOf="@+id/txt_recruit_name"
         app:layout_constraintEnd_toStartOf="@+id/btn_accept"
         app:layout_constraintTop_toTopOf="@+id/txt_recruit_name" />
