--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -72,6 +72,20 @@
             app:layout_constraintStart_toStartOf="@+id/img_group"
             app:layout_constraintTop_toBottomOf="@+id/img_group" />
 
+        <TextView
+            android:id="@+id/txt_group_inactive"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/group_inactive_title"
+            android:textColor="@color/colorAccent"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_group"
+            app:layout_constraintTop_toBottomOf="@+id/txt_group_city" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
